Google Analytics incorporado para recopilacion de datos mediante Firebase

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="btn_acceder">ACCEDER</string>
     <string name="TxVw_email">Correo</string>
     <string name="TxVw_password">Contraseña</string>
+    <string name="btn_google">  Google</string>
 </resources>
