--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="btn_acceder">ACCEDER</string>
     <string name="TxVw_email">Correo</string>
     <string name="TxVw_password">Contraseña</string>
-    <string name="btn_google">  Google</string>
+    <string name="btn_logout">Cerrar Sesión</string>
+    <string name="TxVw_provider">Proveedor</string>
 </resources>
